--- a/slothwerks-site/src/views/about/about.scss
+++ b/slothwerks-site/src/views/about/about.scss
@@ -1,4 +1,6 @@
 .About {
   @include page-content-container;
+  /* Override bottom padding due to existing padding + margin */
+  padding-bottom: 0; 
 }
 
