--- a/slothwerks-site/src/views/contact/contact.scss
+++ b/slothwerks-site/src/views/contact/contact.scss
@@ -1,6 +1,5 @@
 .Contact {
   @include page-content-container;
-  padding-bottom: 0; // Override due to contact buttons
 
   .content-text {
     text-align: center;
